// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`routes organizations routes aircraft routes settings components FuelTypes renders fuel types 1`] = `
<div>
  <h5
    className="MuiTypography-root MuiTypography-h5 MuiTypography-gutterBottom"
  >
    Treibstofftypen
  </h5>
  <button
    className="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary"
    disabled={false}
    onBlur={[Function]}
    onClick={[Function]}
    onDragLeave={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    tabIndex={0}
    type="button"
  >
    <span
      className="MuiButton-label"
    >
      Treibstofftyp hinzufügen
    </span>
  </button>
  <ul
    className="MuiList-root MuiList-dense MuiList-padding"
  >
    <li
      className="MuiListItem-root MuiListItem-dense"
      disabled={false}
    >
      <div
        className="MuiListItemText-root MuiListItemText-dense MuiListItemText-multiline"
      >
        <span
          className="MuiTypography-root MuiListItemText-primary MuiTypography-body2"
        >
          AvGas
        </span>
        <p
          className="MuiTypography-root MuiListItemText-secondary MuiTypography-body2 MuiTypography-colorTextSecondary"
        >
          avgas
        </p>
      </div>
    </li>
    <li
      className="MuiListItem-root MuiListItem-dense"
      disabled={false}
    >
      <div
        className="MuiListItemText-root MuiListItemText-dense MuiListItemText-multiline"
      >
        <span
          className="MuiTypography-root MuiListItemText-primary MuiTypography-body2"
        >
          MoGas
        </span>
        <p
          className="MuiTypography-root MuiListItemText-secondary MuiTypography-body2 MuiTypography-colorTextSecondary"
        >
          mogas
        </p>
      </div>
    </li>
  </ul>
</div>
`;

exports[`routes organizations routes aircraft routes settings components FuelTypes renders no types message 1`] = `
<div>
  <h5
    className="MuiTypography-root MuiTypography-h5 MuiTypography-gutterBottom"
  >
    Treibstofftypen
  </h5>
  <button
    className="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary"
    disabled={false}
    onBlur={[Function]}
    onClick={[Function]}
    onDragLeave={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    tabIndex={0}
    type="button"
  >
    <span
      className="MuiButton-label"
    >
      Treibstofftyp hinzufügen
    </span>
    <span
      className="MuiTouchRipple-root"
    />
  </button>
  <p
    className="MuiTypography-root MuiTypography-body1 MuiTypography-paragraph"
  >
    Keine Treibstofftypen erfasst
  </p>
</div>
`;
